[package]
name = "pulsar2db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envy = "0.4.2"
env_logger = "0.9.0"
log = "0.4.17"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
pulsar = "4.1.1"
tokio-postgres = { version = "0.7.6", features = ["with-serde_json-1", "with-chrono-0_4"]}
anyhow = "1.0"
regex = "1.5"
